@@ -585,11 +585,13 @@ static BOOL double_release_check_enabled = NO;
       // Manipulate the FPU to add the exception mask. (Fixes SIGFPE
       // problems on *BSD)
 
-      volatile short cw;
+      {
+	volatile short cw;
 
-      __asm__ volatile ("fstcw (%0)" : : "g" (&cw));
-      cw |= 1; /* Mask 'invalid' exception */
-      __asm__ volatile ("fldcw (%0)" : : "g" (&cw));
+	__asm__ volatile ("fstcw (%0)" : : "g" (&cw));
+	cw |= 1; /* Mask 'invalid' exception */
+	__asm__ volatile ("fldcw (%0)" : : "g" (&cw));
+      }
 #endif
 
       // Create the global lock
